# bioepic_skills

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  UV_GUIDE.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  try_datasets_detailed.json
.claude-plugin/: marketplace.json
.codex/skills/: essdive-extraction  essdive-search  ontology-grounding  try-skills
.github/workflows/: qa.yml
api/api-base/: index.html
api/api-search/: index.html
api/auth/: index.html
api/data-processing/: index.html
api/utils/: index.html
bioepic_skills/: __init__.py  api_base.py  api_search.py  auth.py  cli.py  data_processing.py  decorators.py  essdive_api.py  example_auth.py  example_usage.py  export_utils.py  fred_parser.py  ontology_grounding.py  trowel_wrapper.py  try_parser.py  utils.py
bioepic_skills/test/: test_api_search.py  test_data_processing.py  test_essdive_api.py  test_fred_parser.py  test_ontology_grounding.py  test_try_parser.py  test_try_parser_datasets.py  test_try_parser_datasets_entries.py  test_try_parser_species_list.py  test_try_parser_traits.py
development/changelog/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/api/: api-base.md  api-search.md  auth.md  data-processing.md  utils.md
docs/development/: changelog.md  contributing.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: authentication.md  cli.md  data-processing.md  usage.md  workflows.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
skills/: README.md
skills/essdive-extraction/: SKILL.md
skills/essdive-search/: SKILL.md
skills/essdive-search/scripts/: essdive_search.py
skills/fred-skills/: SKILL.md
skills/fred-skills/scripts/: fred_data_sources_to_json.py  fred_download_and_search.py  fred_species_to_json.py  fred_traits_to_json.py
skills/ontology-grounding/: SKILL.md
skills/try-skills/: SKILL.md
skills/try-skills/scripts/: try_datasets_filter.py  try_datasets_to_json.py  try_download_and_search.py  try_species_to_json.py  try_traits_to_json.py
user-guide/authentication/: index.html
user-guide/data-processing/: index.html
user-guide/usage/: index.html
