[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioepic_skills"
version = "0.0.1"
description = "A Python library for extracting and preparing structured data from scientific literature"
authors = [
    { name = "Harry Caufield", email = "j.harry.caufield@gmail.com" },
    { name = "Chris Mungall", email = "cjmungall@lbl.gov" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas~=2.2.3",
    "requests~=2.32.3",
    "matplotlib~=3.10.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
]
license-files = ["LICENSE"]

[project.scripts]
bioepic = "bioepic_skills.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "ruff>=0.1.0",
]
