[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioepic_skills"
version = "0.2.0"
description = "A Python library for grounding environmental research terms to ontologies, especially BERVO, using the Ontology Access Kit"
authors = [
    { name = "Harry Caufield", email = "j.harry.caufield@gmail.com" },
    { name = "Chris Mungall", email = "cjmungall@lbl.gov" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "oaklib>=0.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
license-files = ["LICENSE"]

[project.scripts]
bioepic = "bioepic_skills.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "ruff>=0.1.0",
]
